2006-10-27  Erick Gallesio  <eg@essi.fr>

	* Changed the GC to version 7.0alpha7

	* Deleted the --disable-pthreads option for MacOS X

2006-10-25  Erick Gallesio  <eg@essi.fr>

	* lib/srfi-0.stk: Fully  srfi-18 compliant.

2006-10-20  Erick Gallesio  <eg@essi.fr>

	* src/stklos.c (main): FIXED: open file ports were not flushed on
	compiled code.

2006-09-27  Erick Gallesio  <eg@essi.fr>

	* lib/compfile.stk:
	* lib/compiler.stk
	* src/fport.c
	* src/vm.c: Added informations on the global variables in  
	compiled bytecode files. This permits to avoid false messages on
	references to undefined symbols.

2006-09-26  Erick Gallesio  <eg@essi.fr>

	* utils/stklos-compile: Added the possibility to compile
	byte-codes to a C file.

2006-09-22  Erick Gallesio  <eg@essi.fr>

	* src/sport.c (Sgetc): Bug fix: the character #xff was read as
	an EOF on string ports.

2006-09-21  Erick Gallesio  <eg@essi.fr>

	* src/base64.c : Bug fix: null characteters could be added at end
	of streams.

2006-09-15  Erick Gallesio  <eg@essi.fr>

	* lib/peephole.stk: New peephole optimizations
	
	* src/vm.c:
	* lib/compiler.stk (compile-primitive-call): Better optimisation
	on simple +, -, *, / operations.

2006-09-12  Erick Gallesio  <eg@essi.fr>

	* src/port.c: Added READ-BYTE and WRITE-BYTE

2006-09-08  Erick Gallesio  <eg@essi.fr>

	* lib/bonus.stk: Added primitives PRINTF, EPRINTF, FPRINTF

2006-09-05  Erick Gallesio  <eg@essi.fr>

	* lib/boot.stk ("base64"): Added base64 functions

	* lib/bonus.stk (make-path): Accept now multiple file to build a
	complete hierarchy

2006-09-04  Erick Gallesio  <eg@essi.fr>

	* lib/r5rs.stk (%make-with-file): The file name in error messages 
	was incorrect.

	* src/process.c: PROCESS-EXIT-STATUS was not exported.

2006-08-04  Erick Gallesio  <eg@essi.fr>

	* src/lib.c: Deleted the managemement of the STk_library_path
	variable which was not used anymore

2006-06-20  Erick Gallesio  <eg@essi.fr>
